[tool.poetry]
name = "tools-exec"
version = "0.1.0"
description = "To execute seg-inf tools from python3 and get the result in json."
authors = ["juan mesaglio <juan.mesaglio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
xmltodict = "0.12.0"
pytest = "6.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
